Add provider edit service
